--- a/templates/stopnie/add_rejestracja.html
+++ b/templates/stopnie/add_rejestracja.html
@@ -5,7 +5,7 @@
 <form action="/stopnie/{{ stopien.id }}/add_rejestracja/" method="post" class="form horizontal well">
 	{% csrf_token %}
 	{{ form.as_p }} 
-	<input type="submit" class="btn btn-inverse" name="submit" value="Zapisz" />
+	<input type="submit" class="btn btn-inverse" name="submit" value="Dalej" />
 </form>
 
 {% endblock %}
