--- a/templates/stopnie/ankieta.html
+++ b/templates/stopnie/ankieta.html
@@ -1,11 +1,12 @@
-{% extends main.html %}
+{% extends "main.html" %}
 {% block st %}
 
 <form action="/stopnie/{{ kandydat.id }}/ankieta/" method="post" class="form horizontal well">
 	{% csrf_token %}
-	{% for form in formset %}
-		{{ forms.as_p }}
-	{% endfor %} 
+	{% for field in fields %}
+		{{ field.name }}<br />
+			<input type="{{ field.widget }}" name="{{ field.alias }}" > 
+	{% endfor %}
 	<input type="submit" class="btn btn-inverse" name="submit" value="Zapisz" />
 </form>
 
